# example-qt-cutelyst-rest

./: README.md
ClientREST/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
ServerREST/: CMakeLists.txt
ServerREST/src/: CMakeLists.txt  apiv1.cpp  apiv1.h  serverrest.cpp  serverrest.h
